# Options_Risk_Dashboard

./: .build_fixture.py  .build_images.py  .build_notebook.py  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: architecture.md  interpretation_guide.md
notebooks/: methodology.ipynb
notebooks/fixtures/: spy_chain_2026_05_13.parquet
src/ord/: __init__.py
src/ord/analytics/: __init__.py  earnings_crush.py  expected_move.py  gex.py  greeks_dashboard.py  implied_pdf.py  iv_rv_spread.py  iv_surface.py  max_pain.py  oi_heatmap.py  pin_risk.py  put_call_ratio.py  skew.py  strategy_builder.py
src/ord/data/: __init__.py  aggregator.py  base.py  cache.py  polygon_provider.py  tradier_provider.py  validator.py  yfinance_provider.py
src/ord/pricing/: __init__.py  black_scholes.py  greeks.py  iv_solver.py
src/ord/ui/: __init__.py  charts.py  context.py  theme.py
src/ord/ui/tabs/: __init__.py  data_quality.py  gex.py  greeks.py  implied_pdf.py  iv_surface.py  iv_vs_rv.py  max_pain_oi.py  overview.py  pin_risk.py  skew_and_pcr.py  strategy_builder.py
src/ord/utils/: __init__.py  rates.py  time.py
tests/: conftest.py  test_oracle_available.py  test_package_smoke.py
tests/analytics/: conftest.py  test_earnings_crush.py  test_expected_move.py  test_gex.py  test_greeks_dashboard.py  test_implied_pdf.py  test_iv_rv_spread.py  test_iv_surface.py  test_max_pain.py  test_oi_heatmap.py  test_pin_risk.py  test_put_call_ratio.py  test_skew.py  test_strategy_builder.py
tests/data/: test_aggregator.py  test_base.py  test_cache.py  test_polygon_provider.py  test_tradier_provider.py  test_validator.py  test_yfinance_provider.py
tests/pricing/: conftest.py  test_black_scholes.py  test_edge_cases.py  test_greeks.py  test_iv_solver.py
tests/utils/: test_rates.py  test_time.py
